--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -5,18 +5,21 @@
   <div class="col">
     <!-- Search box -->
     <shearch-search-box
-      placeholder="Ingrese capital"
       (onNewValue)="searchByCapital($event)"
+      [initialValue]="initialValue"
+      placeholder="Ingrese capital"
     >
 
     </shearch-search-box>
   </div>
 </div>
-<hr>
+
 <div class="row">
   <div class="col">
+    <hr>
     <!--
      -->
+     <shared-loading-spinner *ngIf="isLoading" [arg]="arg"></shared-loading-spinner>
      <countries-table [countries]="countries"></countries-table>
 
   </div>
