--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -2,14 +2,14 @@
 <hr>
 
 <div class="row">
-  <div class="col">
+  <div class="col text-center">
     <!-- Search box -->
-    <shearch-search-box
-      placeholder="Ingrese región"
-      (onNewValue)="searchByRegion($event)"
-    >
-
-    </shearch-search-box>
+    <button  *ngFor="let region of regions"
+      class="btn mx-2"
+      [ngClass]="{'btn-outline-primary' : selectedRegion === region}"
+      (click)="searchByRegion(region)">
+      {{ region }}
+    </button>
   </div>
 </div>
 <hr>
@@ -17,6 +17,7 @@
   <div class="col">
     <!--
      -->
+     <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
      <countries-table [countries]="countries"></countries-table>
 
   </div>
